tests/golden/fixtures/syntax-invalid-double-colon/expected.err
Error: invalid syntax: expected something else, found ':'
   ╭─[ tests/golden/fixtures/syntax-invalid-double-colon/input.k65:4:13 ]
   │
 4 │     sta RIA::op         // HALT CPU
   │             ┬  
   │             ╰── primary location
───╯

